チェック修正

--- a/src/estimate.html
+++ b/src/estimate.html
@@ -721,7 +721,7 @@
                 </p>
             </div>
             <div class="confirm__btn--container">
-                <a href="">確認画面へ</a>
+                <input type="submit" value="確認画面へ">
             </div>
         </section>
     </main>
