--- a/src/single.html
+++ b/src/single.html
@@ -181,6 +181,7 @@
                 <a class="more__btn" href="./news.html">一覧へもどる</a>
             </div>
         </section>
+        <img class="bg_fixed" src="./assets/images/news/single_bg.svg" alt="">
     </main>
     <footer class="footer">
         <div class="movingChara__inner">
