--- a/src/single.html
+++ b/src/single.html
@@ -99,7 +99,7 @@
                             </a>
                         </li>
                         <li class="menu__item menu__item6">
-                            <a href="https://tmc4514.com/shop/">
+                            <a href="https://tmc4514.com/shop/" target="_blank">
                                 <p class="menu__item--subTitle">ONLINE STORE</p>
                                 <p class="menu__item--title">オンラインストア</p>
                             </a>
@@ -240,7 +240,7 @@
                                 <li class="footerNav__list--item"><a href="./estimate.html"><img src="./assets/images/triangle_right.svg" alt="">お見積もり</a></li>
                                 <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">特定商取引法に基づく表記</a></li>
                                 <li class="footerNav__list--item"><a href="./service.html"><img src="./assets/images/triangle_right.svg" alt="">サービス内容</a></li>
-                                <li class="footerNav__list--item"><a href="https://tmc4514.com/shop/"><img src="./assets/images/triangle_right.svg" alt="">オンラインストア</a></li>
+                                <li class="footerNav__list--item"><a href="https://tmc4514.com/shop/" target="_blank"><img src="./assets/images/triangle_right.svg" alt="">オンラインストア</a></li>
                                 <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">標準引越運送約款</a></li>
                             </ul>
                         </div>
