--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
                                 </a>
                             </li>
                             <li class="menu__item menu__item6">
-                                <a href="https://tmc4514.com/shop/">
+                                <a href="https://tmc4514.com/shop/" target="_blank">
                                     <p class="menu__item--subTitle">ONLINE STORE</p>
                                     <p class="menu__item--title">オンラインストア</p>
                                 </a>
@@ -514,7 +514,7 @@
                 </div>
             </div>
             <div class="more__btn--container">
-                <a class="more__btn" href="https://tmc4514.com/shop/">すべて見る</a>
+                <a class="more__btn" href="https://tmc4514.com/shop/" target="_blank">すべて見る</a>
             </div>
             <div class="online__sale--img">
                 <img src="./assets/images/top/online/img-online_sale.svg" alt="" />
@@ -614,7 +614,7 @@
                                 <li class="footerNav__list--item"><a href="./estimate.html"><img src="./assets/images/triangle_right.svg" alt="">お見積もり</a></li>
                                 <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">特定商取引法に基づく表記</a></li>
                                 <li class="footerNav__list--item"><a href="./service.html"><img src="./assets/images/triangle_right.svg" alt="">サービス内容</a></li>
-                                <li class="footerNav__list--item"><a href="https://tmc4514.com/shop/"><img src="./assets/images/triangle_right.svg" alt="">オンラインストア</a></li>
+                                <li class="footerNav__list--item"><a href="https://tmc4514.com/shop/" target="_blank"><img src="./assets/images/triangle_right.svg" alt="">オンラインストア</a></li>
                                 <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">標準引越運送約款</a></li>
                             </ul>
                         </div>
