オンラインストア部分のスライドのがたつきを削除

--- a/src/index.html
+++ b/src/index.html
@@ -488,7 +488,7 @@
             </div>
             <div class="online__columnInner">
                 <div class="online__column">
-                    <div class="js-slide">
+                    <div class="js-slide js-slide-common">
                         <a class="online__column--item" href="#">
                             <img src="./assets/images/top/online/img-online_item1.png" alt="" />
                         </a>
