--- a/src/service.html
+++ b/src/service.html
@@ -381,7 +381,7 @@
                     <div class="flow__item--title">
                         <p>引越しの前にまず準備</p>
                     </div>
-                    <div class="flow__item--slide js-slide--service">
+                    <div class="flow__item--slide js-slide--service js-slide-common">
                         <img src="./assets/images/service/flow_preparation1.jpg" alt="">
                         <img src="./assets/images/service/flow_preparation2.jpg" alt="">
                         <img src="./assets/images/service/flow_preparation3.jpg" alt="">
@@ -393,7 +393,7 @@
                     <div class="flow__item--title">
                         <p>お引越し当日の流れ</p>
                     </div>
-                    <div class="flow__item--slide js-slide--service">
+                    <div class="flow__item--slide js-slide--service js-slide-common">
                         <img src="./assets/images/service/flow_currentDay1.jpg" alt="">
                         <img src="./assets/images/service/flow_currentDay2.jpg" alt="">
                         <img src="./assets/images/service/flow_currentDay3.jpg" alt="">
