--- a/src/service.html
+++ b/src/service.html
@@ -170,8 +170,8 @@
                         alt="" />
                 </div>
                 <div class="lower__textInner">
-                    <p class="lower__textInner--title PinkBg"><span>東京23区近郊の引越しはお任せを！</span></p>
-                    <p class="lower__textInner--title PinkBg"><span>信頼の引越業者</span></p>
+                    <p class="lower__textInner--title PinkBg"><span>東京23区近郊の引越しは</span></p>
+                    <p class="lower__textInner--title PinkBg"><span>お任せを！信頼の引越業者</span></p>
                     <p class="lower__textInner--text">当社は清潔をモットーに、<br class="sp-br">従業員すべてが非喫煙者！
                         <br>「引越はおもしろい！」<br class="sp-br">そんな風に感じていただけるような
                         <br>サービスをお届けします。</p>
@@ -419,8 +419,12 @@
                         <div class="tag large">大</div>
                     </div>
                     <div class="size__img">
-                        <img class="cardboard__img small__cardboard" src="./assets/images/service/introduction_large.png" alt="">
-                        <img class="cardboard__img large__cardboard" src="./assets/images/service/introduction_large.png" alt="">
+                        <img class="cardboard__img small__cardboard active" src="./assets/images/service/introduction_small.png" alt="">
+                        <img class="cardboard__img small__cardboard" src="./assets/images/service/introduction_small.png" alt="" style="display: none;">
+                        <img class="cardboard__img small__cardboard" src="./assets/images/service/introduction_small.png" alt="" style="display: none;">
+                        <img class="cardboard__img small__cardboard" src="./assets/images/service/introduction_small.png" alt="" style="display: none;">
+                        <!-- <img class="cardboard__img small__cardboard" src="./assets/images/service/introduction_large.png" alt="">
+                        <img class="cardboard__img large__cardboard" src="./assets/images/service/introduction_large.png" alt=""> -->
                     </div>
                     <div class="size__pagenation">
                         <div class="pagenation prev small active"></div>
