--- a/src/service.html
+++ b/src/service.html
@@ -170,8 +170,10 @@
                         alt="" />
                 </div>
                 <div class="lower__textInner">
-                    <p class="lower__textInner--title PinkBg"><span>東京23区近郊の引越しは</span></p>
-                    <p class="lower__textInner--title PinkBg"><span>お任せを！信頼の引越業者</span></p>
+                    <p class="lower__textInner--title PinkBg pcHide"><span>東京23区近郊の引越しは</span></p>
+                    <p class="lower__textInner--title PinkBg pcHide"><span>お任せを！信頼の引越業者</span></p>
+                    <p class="lower__textInner--title PinkBg spHide"><span>東京23区近郊の引越しはお任せを！</span></p>
+                    <p class="lower__textInner--title PinkBg spHide"><span>信頼の引越業者</span></p>
                     <p class="lower__textInner--text">当社は清潔をモットーに、<br class="sp-br">従業員すべてが非喫煙者！
                         <br>「引越はおもしろい！」<br class="sp-br">そんな風に感じていただけるような
                         <br>サービスをお届けします。</p>
