--- a/src/estimate.html
+++ b/src/estimate.html
@@ -50,9 +50,9 @@
                         <li class="snsNav__list--item">
                             <a href=""><img src="./assets/images/icon_line.svg" alt="line" /></a>
                         </li>
-                        <li class="snsNav__list--item">
+                        <!-- <li class="snsNav__list--item">
                             <a href="tel:0120374514"><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
                 <div class="headerNavMenu">
@@ -168,7 +168,7 @@
                     </div>
                 </a>
                 <a  href="#estimateForm" class="estimate__item estimate__item--form">
-                    <div class="estimate__item--logo"><img src="./assets/images/estimate/estimate_logo2.png" alt=""></div>
+                    <div class="estimate__item--logo"><img src="./assets/images/estimate/illust_howmuch.svg" alt=""></div>
                     <p class="estimate__item--text">お見積もり<br class="pc-br">フォームで依頼</p>
                     <div class="estimate__item--btn">
                         <p>必要事項をご入力の上、<br>送信ください！</p>
