--- a/src/index.html
+++ b/src/index.html
@@ -50,9 +50,9 @@
                         <li class="snsNav__list--item">
                             <a href=""><img src="./assets/images/icon_line.svg" alt="line" /></a>
                         </li>
-                        <li class="snsNav__list--item">
+                        <!-- <li class="snsNav__list--item">
                             <a href="tel:0120374514"><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
                 <div class="headerNavMenu">
