チェック修正

--- a/src/about.html
+++ b/src/about.html
@@ -309,33 +309,35 @@
                 <p class="page__subTitle">HISTORY</p>
                 <h2 class="page__title">TMCができるまで</h2>
             </div>
-            <div class="history__column">
-                <div class="history__line"></div>
-                <div class="history__item right">
-                    <img  class="history__chara history__chara1" src="./assets/images/about/about_history1.png" alt="">
-                    <p class="history__item--year">2006<span class="small">年</span></p>
-                    <p class="histroy__item--text">「たかくら伝説」として、芸人活動を開始。芸人活動の傍ら、10年以上続けている引越しのアルバイトの経験を活かし、数多くの著名人の引越しを手伝う。</p>
-                </div>
-                <div class="history__item left">
-                    <img class="history__chara history__chara2" src="./assets/images/about/about_history2.png" alt="">
-                    <p class="history__item--year">2010<span class="small">年</span></p>
-                    <p class="histroy__item--text">「たかくら伝説」から<br>「たかくら引越センター」に、改名。</p>
-                </div>
-                <div class="history__item right">
-                    <img class="history__chara history__chara3" src="./assets/images/about/about_history3.svg" alt="">
-                    <p class="history__item--year">2012<span class="small">年</span></p>
-                    <p class="histroy__item--text">軽貨物運送事業として、<br>「たかくら引越センター」を開業。</p>
-                </div>
-                <div class="history__item left">
-                    <img class="history__chara history__chara4" src="./assets/images/about/about_history4.png" alt="">
-                    <p class="history__item--year">2014<span class="small">年</span></p>
-                    <p class="histroy__item--text">一般貨物自動車運送事業許可を取得。<br>（事業者番号460008314 関自貨第90号）</p>
-                </div>
-                <div class="history__bgText">
-                    <p>2006</p>
-                    <p>2010</p>
-                    <p>2012</p>
-                    <p>2014</p>
+            <div class="history__column--wrap">
+                <div class="history__column">
+                    <div class="history__line"></div>
+                    <div class="history__item right">
+                        <img  class="history__chara history__chara1" src="./assets/images/about/about_history1.png" alt="">
+                        <p class="history__item--year">2006<span class="small">年</span></p>
+                        <p class="histroy__item--text">「たかくら伝説」として、芸人活動を開始。芸人活動の傍ら、10年以上続けている引越しのアルバイトの経験を活かし、数多くの著名人の引越しを手伝う。</p>
+                    </div>
+                    <div class="history__item left">
+                        <img class="history__chara history__chara2" src="./assets/images/about/about_history2.png" alt="">
+                        <p class="history__item--year">2010<span class="small">年</span></p>
+                        <p class="histroy__item--text">「たかくら伝説」から<br>「たかくら引越センター」に、改名。</p>
+                    </div>
+                    <div class="history__item right">
+                        <img class="history__chara history__chara3" src="./assets/images/about/about_history3.svg" alt="">
+                        <p class="history__item--year">2012<span class="small">年</span></p>
+                        <p class="histroy__item--text">軽貨物運送事業として、<br>「たかくら引越センター」を開業。</p>
+                    </div>
+                    <div class="history__item left">
+                        <img class="history__chara history__chara4" src="./assets/images/about/about_history4.png" alt="">
+                        <p class="history__item--year">2014<span class="small">年</span></p>
+                        <p class="histroy__item--text">一般貨物自動車運送事業許可を取得。<br>（事業者番号460008314 関自貨第90号）</p>
+                    </div>
+                    <div class="history__bgText">
+                        <p>2006</p>
+                        <p>2010</p>
+                        <p>2012</p>
+                        <p>2014</p>
+                    </div>
                 </div>
             </div>
         </section>
