--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="assets/css/variable.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/page.top.css" />
+    <link rel="stylesheet" href="assets/css/anime.css" />
 </head>
 
 <body>
