アニメーション反映

--- a/src/index.html
+++ b/src/index.html
@@ -193,8 +193,8 @@
         </section>
         <section class="news">
             <div class="bgPinkText__inner">
-                <p class="bgPinkText first">TAKAKURA MOVING CENTER</p>
-                <p class="bgPinkText second">TAKAKURA MOVING CENTER</p>
+                <p class="bgPinkText first slide-in slide-inLeft">TAKAKURA MOVING CENTER</p>
+                <p class="bgPinkText second slide-in slide-inRight">TAKAKURA MOVING CENTER</p>
             </div>
             <div class="news__inner">
                 <div class="news__inner--tv">
