--- a/src/index.html
+++ b/src/index.html
@@ -232,8 +232,8 @@
             </div>
             <div class="about__charaInner">
                 <img class="about__chara--img1" src="./assets/images/top/about/img-about_chara1.svg" alt="" />
-                <img class="about__chara--surround1" src="./assets/images/top/about/img-about_surround1.svg" alt="" />
-                <img class="about__chara--surround2" src="./assets/images/top/about/img-about_surround2.svg" alt="" />
+                <div class="about__chara--surround1"><img src="./assets/images/top/about/img-about_surround1.svg" alt="" /></div>
+                <div class="about__chara--surround2"><img src="./assets/images/top/about/img-about_surround2.svg" alt="" /></div>
                 <img class="about__pinkCircle first" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
                 <img class="about__pinkCircle second" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
                 <img class="about__pinkCircle third" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
@@ -646,6 +646,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="assets/js/app.js"></script>
+    <script src="assets/js/anime.js"></script>
 </body>
 
 </html>
