--- a/src/index.html
+++ b/src/index.html
@@ -231,7 +231,7 @@
                 </div> -->
             </div>
             <div class="about__charaInner">
-                <img class="about__chara--img1" src="./assets/images/top/about/img-about_chara1.svg" alt="" />
+                <div class=""><img class="about__chara--img1" src="./assets/images/top/about/img-about_chara1.svg" alt="" /></div>
                 <div class="about__chara--surround1"><img src="./assets/images/top/about/img-about_surround1.svg" alt="" /></div>
                 <div class="about__chara--surround2"><img src="./assets/images/top/about/img-about_surround2.svg" alt="" /></div>
                 <img class="about__pinkCircle first" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
@@ -325,8 +325,9 @@
                 <a class="more__btn" href="./service.html">詳しくはこちら</a>
             </div>
         </section>
-        <div class="scrolTextInner bg-yellow">
-            <p class="scrolText">都内の引越しはお任せください！単身者からご家族まで都内の引越しはお任せください！単身者からご家族まで都内の引越しはお任せください！単身者か</p>
+        <div class="scrolTextInner bg-yellow infinite__scroll">
+            <p class="scrolText">単身者からご家族まで都内の引越しはお任せください！単身者からご家族まで都内の引越しはお任せください！単身者からご家族まで都内の引越しはお任せください！</p>
+            <p class="scrolText">単身者からご家族まで都内の引越しはお任せください！単身者からご家族まで都内の引越しはお任せください！単身者からご家族まで都内の引越しはお任せください！</p>
         </div>
         <section class="secret">
             <div class="page__title--inner">
@@ -437,8 +438,9 @@
                     </div>
                 </li>
             </ul>
-            <div class="bgPinkText__inner palePink">
-                <p class="bgPinkText">TMC TMC TMC TMC TMC</p>
+            <div class="bgPinkText__inner palePink infinite__scroll">
+                <p class="bgPinkText">TMC TMC TMC TMC TMC TMC TMC TMC TMC</p>
+                <p class="bgPinkText">TMC TMC TMC TMC TMC TMC TMC TMC TMC</p>
             </div>
         </section>
         <section class="message">
