代表メッセージ挿入

--- a/src/about.html
+++ b/src/about.html
@@ -298,8 +298,17 @@
                         <p class="page__subTitle left__title">MESSAGE</p>
                         <h2 class="page__title">代表メッセージ</h2>
                     </div>
-                    <p class="message__content--text">メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。
-                        <br><br>メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。メッセージが入ります。</p>
+                    <p class="message__content--text">
+                        この度は、弊社ホームページをご覧頂き誠にありがとうございます。<br>
+                        たかくら引越センター代表の高倉弘樹と申します。<br><br>
+                        私は幼少期から、芸人になることが夢でした。<br class="sp-br">上京するために、高校時代から引越のアルバイトをはじめ、上京してからもずっと引越のアルバイトを続けておりました。<br class="sp-br">念願叶い、芸人にはなりましたが、やはり現実はそう甘くはなく、不遇の下積み時代を過ごしておりました。<br>
+                        ある時、とある先輩の引越を手伝って欲しいと声を掛けられ、お手伝いしたところ「引越の作業が別格過ぎる」と先輩が笑ってくれました。<br>
+                        その時初めて自分の武器は『引越』なんだと気付き、芸名を『たかくら引越センター』に改名、引越業者としての『たかくら引越センター』も同時に開業いたしました。<br><br>
+                        引越の魅力はなんですか？とよく聞かれますが、やはり引越の醍醐味はお客様との出会いに尽きると思います。<br class="sp-br">私自身、これまでに1万件以上の引越に携わってきましたが、その1件1件には、お客様の想いと物語が詰まっており、そのお手伝いをさせて頂き、感謝の気持ちを戴いた時の感動は何事にも代え難いものがございます。<br>
+                        私は、『引越』に人生を救ってもらいました。<br class="sp-br">そんな私だからこそ、皆様に提供できる最高の『引越』があると思っております。<br class="sp-br">日本一小さい引越屋ですが、『引越』に対する情熱と技術はどこにも負けない自信がございます。<br><br>
+                        『引越は面白い』を掲げ、皆様の人生に数回しかない引越を、最高の仲間達と共に全力でサポートさせて頂くことが、私の『引越』に対する恩返しであり、引越業界全体の活性化に繋がると考えております。<br>
+                        今後とも格別のご支援、ご愛好を賜りますようよろしくお願い申し上げます。
+                    </p>
                     <p class="message__content--name"><span>代表</span><span class="large">高倉　弘樹</span><span class="small">KOUKI TAKAKURA</span></p>
                 </div>
             </div>
