--- a/src/single.html
+++ b/src/single.html
@@ -125,7 +125,7 @@
                             <li class="link__item icon__item1"><a href=""><span class="home__icon"><img src="./assets/images/icon_realestate.svg" alt=""><span>たかくら不動産屋さん</a></li>
                             <li class="link__item"><a href="">特定商取引法に基づく表記</a></li>
                             <li class="link__item icon__item2"><a href=""><span class="recycle__icon"><img src="./assets/images/icon_recycle.svg" alt=""></span>たかくらリサイクルセンター</a></li>
-                            <li class="link__item"><a href="">標準引越運送約款</a></li>
+                            <li class="link__item"><a href="./assets/pdf/yakkan.pdf" target="_blank">標準引越運送約款</a></li>
                         </ul>
                     </div>
                     <div class="menu__sns">
@@ -241,7 +241,7 @@
                                 <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">特定商取引法に基づく表記</a></li>
                                 <li class="footerNav__list--item"><a href="./service.html"><img src="./assets/images/triangle_right.svg" alt="">サービス内容</a></li>
                                 <li class="footerNav__list--item"><a href="https://tmc4514.com/shop/" target="_blank"><img src="./assets/images/triangle_right.svg" alt="">オンラインストア</a></li>
-                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">標準引越運送約款</a></li>
+                                <li class="footerNav__list--item"><a href="./assets/pdf/yakkan.pdf" target="_blank"><img src="./assets/images/triangle_right.svg" alt="">標準引越運送約款</a></li>
                             </ul>
                         </div>
                         <div class="footerBtn__inner">
