アニメーション追加

--- a/src/index.html
+++ b/src/index.html
@@ -193,8 +193,8 @@
         </section>
         <section class="news">
             <div class="bgPinkText__inner">
-                <p class="bgPinkText first slide-in slide-inLeft">TAKAKURA MOVING CENTER</p>
-                <p class="bgPinkText second slide-in slide-inRight">TAKAKURA MOVING CENTER</p>
+                <p data-anime="slide-in" class="bgPinkText first slide-inLeft">TAKAKURA MOVING CENTER</p>
+                <p data-anime="slide-in" class="bgPinkText second slide-in slide-inRight">TAKAKURA MOVING CENTER</p>
             </div>
             <div class="news__inner">
                 <div class="news__inner--tv">
@@ -231,7 +231,7 @@
                 </div> -->
             </div>
             <div class="about__charaInner">
-                <div class=""><img class="about__chara--img1" src="./assets/images/top/about/img-about_chara1.svg" alt="" /></div>
+                <div data-anime="popup__trigger" class="about__chara--wrap" style="opacity: 0;"><img class="about__chara--img1" src="./assets/images/top/about/img-about_chara1.svg" alt="" /></div>
                 <div class="about__chara--surround1"><img src="./assets/images/top/about/img-about_surround1.svg" alt="" /></div>
                 <div class="about__chara--surround2"><img src="./assets/images/top/about/img-about_surround2.svg" alt="" /></div>
                 <img class="about__pinkCircle first" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
@@ -286,7 +286,7 @@
                 <div class="service__column--item">
                     <p class="service__column--title">単身のお引越し</p>
                     <div class="service__column--img">
-                        <img class="service__column--chara" src="./assets/images/top/service/img-service_chara1.svg"
+                        <img style="opacity: 0;" data-anime="popup__trigger" class="service__column--chara" src="./assets/images/top/service/img-service_chara1.svg"
                             alt="" />
                         <img class="service__column--bg" src="./assets/images/top/service/img-service_charaBg.svg"
                             alt="" />
