アニメーション追加

--- a/src/index.html
+++ b/src/index.html
@@ -193,8 +193,8 @@
         </section>
         <section class="news">
             <div class="bgPinkText__inner">
-                <p data-anime="slide-in" class="bgPinkText first slide-inLeft">TAKAKURA MOVING CENTER</p>
-                <p data-anime="slide-in" class="bgPinkText second slide-in slide-inRight">TAKAKURA MOVING CENTER</p>
+                <p data-anime="slide-inRight" class="bgPinkText first initial-anime">TAKAKURA MOVING CENTER</p>
+                <p data-anime="slide-inLeft" class="bgPinkText second initial-anime">TAKAKURA MOVING CENTER</p>
             </div>
             <div class="news__inner">
                 <div class="news__inner--tv">
@@ -231,20 +231,20 @@
                 </div> -->
             </div>
             <div class="about__charaInner">
-                <div data-anime="popup__trigger" class="about__chara--wrap" style="opacity: 0;"><img class="about__chara--img1" src="./assets/images/top/about/img-about_chara1.svg" alt="" /></div>
+                <div data-anime="popup" class="about__chara--wrap"><img class="about__chara--img1" src="./assets/images/top/about/img-about_chara1.svg" alt="" /></div>
                 <div class="about__chara--surround1"><img src="./assets/images/top/about/img-about_surround1.svg" alt="" /></div>
                 <div class="about__chara--surround2"><img src="./assets/images/top/about/img-about_surround2.svg" alt="" /></div>
-                <img class="about__pinkCircle first" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
-                <img class="about__pinkCircle second" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
-                <img class="about__pinkCircle third" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
-                <img class="about__pinkCircle forth" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
-                <img class="about__pinkCircle fifth" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
-                <img class="about__pinkCircle sixth" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
-                <img class="about__whiteCircle first" src="./assets/images/top/about/img-about_whiteKirakira_small.svg"
+                <img data-anime="star01" class="about__pinkCircle first star03" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
+                <img class="about__pinkCircle second star01" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
+                <img class="about__pinkCircle third star02" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
+                <img class="about__pinkCircle forth star01" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
+                <img class="about__pinkCircle fifth star02" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
+                <img class="about__pinkCircle sixth star01" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
+                <img class="about__whiteCircle first star03" src="./assets/images/top/about/img-about_whiteKirakira_small.svg"
                     alt="" />
-                <img class="about__whiteCircle second" src="./assets/images/top/about/img-about_whiteKirakira_small.svg"
+                <img class="about__whiteCircle second star01" src="./assets/images/top/about/img-about_whiteKirakira_small.svg"
                     alt="" />
-                <img class="about__whiteCircle third" src="./assets/images/top/about/img-about_whiteKirakira.svg"
+                <img class="about__whiteCircle third star02" src="./assets/images/top/about/img-about_whiteKirakira.svg"
                     alt="" />
             </div>
             <div class="about__textInner">
@@ -284,36 +284,36 @@
             </div>
             <div class="service__column">
                 <div class="service__column--item">
-                    <p class="service__column--title">単身のお引越し</p>
+                    <p data-anime="popup" class="service__column--title">単身のお引越し</p>
                     <div class="service__column--img">
-                        <img style="opacity: 0;" data-anime="popup__trigger" class="service__column--chara" src="./assets/images/top/service/img-service_chara1.svg"
+                        <img data-anime="popup" class="service__column--chara" src="./assets/images/top/service/img-service_chara1.svg"
                             alt="" />
                         <img class="service__column--bg" src="./assets/images/top/service/img-service_charaBg.svg"
                             alt="" />
                     </div>
                 </div>
                 <div class="service__column--item bottom">
-                    <p class="service__column--title">ご家族のお引越し</p>
+                    <p data-anime="popup" class="service__column--title delay-time04">ご家族のお引越し</p>
                     <div class="service__column--img">
-                        <img class="service__column--chara" src="./assets/images/top/service/img-service_chara2.svg"
+                        <img data-anime="popup" class="service__column--chara delay-time04" src="./assets/images/top/service/img-service_chara2.svg"
                             alt="" />
                         <img class="service__column--bg" src="./assets/images/top/service/img-service_charaBg.svg"
                             alt="" />
                     </div>
                 </div>
                 <div class="service__column--item">
-                    <p class="service__column--title">まるごとお任せ</p>
+                    <p data-anime="popup" class="service__column--title delay-time08">まるごとお任せ</p>
                     <div class="service__column--img">
-                        <img class="service__column--chara" src="./assets/images/top/service/img-service_chara3.svg"
+                        <img data-anime="popup" class="service__column--chara delay-time08" src="./assets/images/top/service/img-service_chara3.svg"
                             alt="" />
                         <img class="service__column--bg" src="./assets/images/top/service/img-service_charaBg.svg"
                             alt="" />
                     </div>
                 </div>
                 <div class="service__column--item bottom">
-                    <p class="service__column--title">荷物の保管<span class="asterisk">※</span></p>
+                    <p data-anime="popup" class="service__column--title delay-time12">荷物の保管<span class="asterisk">※</span></p>
                     <div class="service__column--img">
-                        <img class="service__column--chara" src="./assets/images/top/service/img-service_chara4.svg"
+                        <img data-anime="popup" class="service__column--chara delay-time12" src="./assets/images/top/service/img-service_chara4.svg"
                             alt="" />
                         <img class="service__column--bg" src="./assets/images/top/service/img-service_charaBg.svg"
                             alt="" />
@@ -360,12 +360,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="secretList__item--chara1">
+                    <div data-anime="movingRightChara" class="secretList__item--chara1">
                         <img src="./assets/images/top/secret/img-secret_chara1.svg" alt="" />
                     </div>
                 </li>
                 <li class="secretList__item reverse">
-                    <div class="secretList__item--chara2">
+                    <div data-anime="movingLeftChara" class="secretList__item--chara2">
                         <img src="./assets/images/top/secret/img-secret_chara2.svg" alt="" />
                     </div>
                     <div class="secretList__item--container">
@@ -410,12 +410,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="secretList__item--chara3">
+                    <div data-anime="movingRightChara" class="secretList__item--chara3">
                         <img src="./assets/images/top/secret/img-secret_chara3.svg" alt="" />
                     </div>
                 </li>
                 <li class="secretList__item reverse">
-                    <div class="secretList__item--chara4">
+                    <div data-anime="movingLeftChara" class="secretList__item--chara4">
                         <img src="./assets/images/top/secret/img-secret_chara4.svg" alt="" />
                     </div>
                     <div class="secretList__item--container">
@@ -458,7 +458,8 @@
                         </div> -->
                     </div>
                     <div class="message__leftInner--img">
-                        <img src="./assets/images/top/message/img-message.svg" alt="" />
+                        <img src="./assets/images/top/message/img-message01.svg" alt="" />
+                        <img class="buruburu" src="./assets/images/top/message/img-message02.svg" alt="" />
                     </div>
                 </div>
                 <div class="message__rightInner">
@@ -520,7 +521,10 @@
                 <a class="more__btn" href="https://tmc4514.com/shop/" target="_blank">すべて見る</a>
             </div>
             <div class="online__sale--img">
-                <img src="./assets/images/top/online/img-online_sale.svg" alt="" />
+                <div data-anime="popup"><img class="line__stamp--bg" src="./assets/images/top/online/line_stamp_bg.svg" alt="" /></div>
+                <div data-anime="popup"><img class="line__stamp--text" src="./assets/images/top/online/line_stamp_text.svg" alt="" /></div>
+                <div data-anime="popup"><img class="line__stamp--chara" src="./assets/images/top/online/line_stamp_chara.svg" alt="" /></div>
+                <!-- <img src="./assets/images/top/online/img-online_sale.svg" alt="" /> -->
             </div>
         </section>
         <section class="instagram">
@@ -562,11 +566,13 @@
     </main>
     <footer class="footer">
         <div class="movingChara__inner">
-            <div class="movingChara">
-                <img src="./assets/images/img-moving.svg" alt="" />
+            <div data-anime="driving" class="movingChara">
+                <img data-anime="shaking" src="./assets/images/img-moving.svg" alt="" />
             </div>
-            <div class="movingChara__load">
-                <img src="./assets/images/img-load.svg" alt="" />
+            <div class="movingChara__load infinite__scroll">
+                <img class="scrolText" src="./assets/images/img-load.svg" alt="" />
+                <img class="scrolText" src="./assets/images/img-load.svg" alt="" />
+                <div class="load__bg"></div>
             </div>
         </div>
         <div class="footer__inner">
