--- a/src/index.html
+++ b/src/index.html
@@ -123,9 +123,9 @@
                         </div>
                         <div class="menu__link">
                             <ul class="link__list">
-                                <li class="link__item"><a href="">プライバシーポリシー</a></li>
+                                <li class="link__item"><a href="./policy.html">プライバシーポリシー</a></li>
                                 <li class="link__item icon__item1"><a href=""><span class="home__icon"><img src="./assets/images/icon_realestate.svg" alt=""><span>たかくら不動産屋さん</a></li>
-                                <li class="link__item"><a href="">特定商取引法に基づく表記</a></li>
+                                <li class="link__item"><a href="./legal.html">特定商取引法に基づく表記</a></li>
                                 <li class="link__item icon__item2"><a href=""><span class="recycle__icon"><img src="./assets/images/icon_recycle.svg" alt=""></span>たかくらリサイクルセンター</a></li>
                                 <li class="link__item"><a href="./assets/pdf/yakkan.pdf" target="_blank">標準引越運送約款</a></li>
                             </ul>
@@ -618,10 +618,10 @@
                             <ul class="footerNav__list">
                                 <li class="footerNav__list--item"><a href="./index.html"><img src="./assets/images/triangle_right.svg" alt="">HOME</a></li>
                                 <li class="footerNav__list--item"><a href="./about.html"><img src="./assets/images/triangle_right.svg" alt="">会社概要</a></li>
-                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">プライバシーポリシー</a></li>
+                                <li class="footerNav__list--item"><a href="./policy.html"><img src="./assets/images/triangle_right.svg" alt="">プライバシーポリシー</a></li>
                                 <li class="footerNav__list--item"><a href="./news.html"><img src="./assets/images/triangle_right.svg" alt="">お知らせ</a></li>
                                 <li class="footerNav__list--item"><a href="./estimate.html"><img src="./assets/images/triangle_right.svg" alt="">お見積もり</a></li>
-                                <li class="footerNav__list--item"><a href="#"><img src="./assets/images/triangle_right.svg" alt="">特定商取引法に基づく表記</a></li>
+                                <li class="footerNav__list--item"><a href="./legal.html"><img src="./assets/images/triangle_right.svg" alt="">特定商取引法に基づく表記</a></li>
                                 <li class="footerNav__list--item"><a href="./service.html"><img src="./assets/images/triangle_right.svg" alt="">サービス内容</a></li>
                                 <li class="footerNav__list--item"><a href="https://tmc4514.com/shop/" target="_blank"><img src="./assets/images/triangle_right.svg" alt="">オンラインストア</a></li>
                                 <li class="footerNav__list--item"><a href="./assets/pdf/yakkan.pdf" target="_blank"><img src="./assets/images/triangle_right.svg" alt="">標準引越運送約款</a></li>
