--- a/src/index.html
+++ b/src/index.html
@@ -193,8 +193,14 @@
         </section>
         <section class="news">
             <div class="bgPinkText__inner">
-                <p data-anime="slide-inRight" class="bgPinkText first initial-anime">TAKAKURA MOVING CENTER</p>
-                <p data-anime="slide-inLeft" class="bgPinkText second initial-anime">TAKAKURA MOVING CENTER</p>
+                <div class="scrolTextInner infinite__scroll--reverse">
+                    <p class="scrolText bgPinkText">TAKAKURA MOVING CENTER TAKAKURA MOVING CENTER&nbsp;</p>
+                    <p class="scrolText bgPinkText">TAKAKURA MOVING CENTER TAKAKURA MOVING CENTER&nbsp;</p>
+                </div>
+                <div class="scrolTextInner infinite__scroll">
+                    <p class="scrolText bgPinkText">TAKAKURA MOVING CENTER TAKAKURA MOVING CENTER&nbsp;</p>
+                    <p class="scrolText bgPinkText">TAKAKURA MOVING CENTER TAKAKURA MOVING CENTER&nbsp;</p>
+                </div>
             </div>
             <div class="news__inner">
                 <div class="news__inner--tv">
@@ -234,12 +240,12 @@
                 <div data-anime="popup" class="about__chara--wrap"><img class="about__chara--img1" src="./assets/images/top/about/img-about_chara1.svg" alt="" /></div>
                 <div class="about__chara--surround1"><img src="./assets/images/top/about/img-about_surround1.svg" alt="" /></div>
                 <div class="about__chara--surround2"><img src="./assets/images/top/about/img-about_surround2.svg" alt="" /></div>
-                <img data-anime="star01" class="about__pinkCircle first star03" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
+                <img data-anime="star01" class="about__pinkCircle first star03 delay-time0" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
                 <img class="about__pinkCircle second star01" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
-                <img class="about__pinkCircle third star02" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
+                <img class="about__pinkCircle third star02 delay-time0" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
                 <img class="about__pinkCircle forth star01" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
                 <img class="about__pinkCircle fifth star02" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
-                <img class="about__pinkCircle sixth star01" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
+                <img class="about__pinkCircle sixth star01 delay-time0" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
                 <img class="about__whiteCircle first star03" src="./assets/images/top/about/img-about_whiteKirakira_small.svg"
                     alt="" />
                 <img class="about__whiteCircle second star01" src="./assets/images/top/about/img-about_whiteKirakira_small.svg"
@@ -439,8 +445,8 @@
                 </li>
             </ul>
             <div class="bgPinkText__inner palePink infinite__scroll">
-                <p class="bgPinkText">TMC TMC TMC TMC TMC TMC TMC TMC TMC</p>
-                <p class="bgPinkText">TMC TMC TMC TMC TMC TMC TMC TMC TMC</p>
+                <p class="bgPinkText">TMC TMC TMC TMC TMC TMC TMC TMC TMC&nbsp;</p>
+                <p class="bgPinkText">TMC TMC TMC TMC TMC TMC TMC TMC TMC&nbsp;</p>
             </div>
         </section>
         <section class="message">
@@ -514,7 +520,9 @@
                     </div>
                 </div>
                 <div class="online__chara--img">
-                    <img src="./assets/images/top/online/img-online_chara.svg" alt="" />
+                    <img class="sleep__effect" src="./assets/images/top/online/sleep_effect.svg" alt="" />
+                    <img class="sleep__chara" src="./assets/images/top/online/sleep_chara.svg" alt="" />
+                    <!-- <img src="./assets/images/top/online/img-online_chara.svg" alt="" /> -->
                 </div>
             </div>
             <div class="more__btn--container">
@@ -569,7 +577,7 @@
             <div data-anime="driving" class="movingChara">
                 <img data-anime="shaking" src="./assets/images/img-moving.svg" alt="" />
             </div>
-            <div class="movingChara__load infinite__scroll">
+            <div class="movingChara__load infinite__scroll--reverse">
                 <img class="scrolText" src="./assets/images/img-load.svg" alt="" />
                 <img class="scrolText" src="./assets/images/img-load.svg" alt="" />
                 <div class="load__bg"></div>
