受付時間追加

--- a/src/legal.html
+++ b/src/legal.html
@@ -116,7 +116,7 @@
                                         <p class="tel__telSpeech first">みんな</p>
                                         <p class="tel__telSpeech second">ヨッコイショ！</p>
                                         <p class="tel__telNumber">0120-37-4514</p>
-                                        <p class="tel__reception">受付時間 ●：●～●：●</p>
+                                        <p class="tel__reception">受付時間 9：00～17：00</p>
                                     </div>
                                 </div>
                             </a>
@@ -248,7 +248,7 @@
                                 <p class="footer__telSpeech first">みんな</p>
                                 <p class="footer__telSpeech second">ヨッコイショ！</p>
                                 <p class="footer__telNumber">0120-37-4514</p>
-                                <p class="footer__reception">受付時間 ●：●～●：●</p>
+                                <p class="footer__reception">受付時間 9：00～17：00</p>
                             </div>
                         </a>
                     </div>
