写真追加、差し替え

--- a/src/characters.html
+++ b/src/characters.html
@@ -153,7 +153,13 @@
                     <h2 class="page__title">従業員紹介</h2>
                 </div>
                 <div class="lower__charaInner">
-                    <img class="lower__chara--img1" src="./assets/images/characters/characters_main.png" alt="" />
+                    <!-- <img class="lower__chara--img1" src="./assets/images/characters/characters_main.png" alt="" /> -->
+                    <div class="lower__chara--img">
+                        <img class="lower__chara--img01" src="./assets/images/characters/characters_main01.png" alt="キャラクター画像" />
+                        <img class="lower__chara--img02" src="./assets/images/characters/characters_main02.png" alt="キャラクター画像" />
+                        <img class="lower__chara--img03" src="./assets/images/characters/characters_main03.png" alt="キャラクター画像" />
+                        <img class="lower__chara--img04" src="./assets/images/characters/characters_main04.png" alt="キャラクター画像" />
+                    </div>
                     <img class="lower__chara--surround1" src="./assets/images/top/about/img-about_surround1.svg" alt="" />
                     <img class="lower__chara--surround2" src="./assets/images/top/about/img-about_surround2.svg" alt="" />
                     <img class="lower__pinkCircle first" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
