--- a/src/index.html
+++ b/src/index.html
@@ -28,12 +28,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css" />
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/variable.css" />
+    <link rel="stylesheet" href="assets/css/loading.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/page.top.css" />
     <link rel="stylesheet" href="assets/css/anime.css" />
 </head>
 
 <body>
+    <div id="loading">
+        <div class="loading__img">
+            <img src="" alt="たかくらくん">
+        </div>
+        <div class="loading__text">
+            <p>ちょっとまってね<span class="loading__text--01">.</span><span class="loading__text--02">.</span><span class="loading__text--03">.</span></p>
+        </div>
+    </div>
     <header class="header">
         <div class="header__inner">
             <div class="headerLogo">
@@ -351,7 +360,7 @@
                 <li class="secretList__item">
                     <div class="secretList__item--container">
                         <div class="secretList__item--img">
-                            <img src="./assets/images/top/secret/img-secret_item1.jpg" alt="" />
+                            <img src="./assets/images/top/secret/img-secret_item1.svg" alt="" />
                         </div>
                         <div class="secretList__item--textArea">
                             <p class="secretList__speech">01</p>
@@ -391,7 +400,7 @@
                             </div>
                         </div>
                         <div class="secretList__item--img">
-                            <img src="./assets/images/top/secret/img-secret_item2.jpg" alt="" />
+                            <img src="./assets/images/top/secret/img-secret_item2.svg" alt="" />
                         </div>
                     </div>
                 </li>
