--- a/src/service.html
+++ b/src/service.html
@@ -421,10 +421,10 @@
                         <div class="tag large">大</div>
                     </div>
                     <div class="size__img">
-                        <img class="cardboard__img small__cardboard active" src="./assets/images/service/introduction_small.png" alt="">
-                        <img class="cardboard__img small__cardboard" src="./assets/images/service/introduction_small.png" alt="" style="display: none;">
-                        <img class="cardboard__img small__cardboard" src="./assets/images/service/introduction_small.png" alt="" style="display: none;">
-                        <img class="cardboard__img small__cardboard" src="./assets/images/service/introduction_small.png" alt="" style="display: none;">
+                        <img class="cardboard__img small__cardboard01 active" src="./assets/images/service/introduction_small01.png" alt="ダンボール画像">
+                        <img class="cardboard__img small__cardboard02" src="./assets/images/service/introduction_small02.png" alt="" style="display: none;">
+                        <img class="cardboard__img small__cardboard03" src="./assets/images/service/introduction_small03.png" alt="" style="display: none;">
+                        <img class="cardboard__img small__cardboard04" src="./assets/images/service/introduction_small04.png" alt="" style="display: none;">
                         <!-- <img class="cardboard__img small__cardboard" src="./assets/images/service/introduction_large.png" alt="">
                         <img class="cardboard__img large__cardboard" src="./assets/images/service/introduction_large.png" alt=""> -->
                     </div>
